unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/SPARTADMS__Periodic_Review_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DMS Manage Document Types</description>
    <label>DMS Manage Document Types</label>
</CustomObject>