unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/fields/SPARTADMS__Document_Auto_Effective_Days__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Auto_Effective_Days__c</fullName>
        <description>Document Auto Effective Days</description>
        <inlineHelpText>Document Auto Effective Days</inlineHelpText>
        <label>Document Auto Effective Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>