unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/fields/SPARTADMS__Document_Retention_Period_years__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Retention_Period_years__c</fullName>
        <label>Document Retention Period (years)</label>
        <length>2</length>
        <type>Text</type>
    </CustomField>