unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/fields/SPARTADMS__Months_to_Flag_Periodic_Review__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Months_to_Flag_Periodic_Review__c</fullName>
        <description>Months to Flag Periodic Review</description>
        <inlineHelpText>Months to Flag Periodic Review</inlineHelpText>
        <label>Months to Flag Periodic Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>