unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/fields/SPARTADMS__Name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Name__c</fullName>
        <description>Document Type</description>
        <inlineHelpText>Document Type</inlineHelpText>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>