unpackaged/main/default/objects/SPARTADMS__Periodic_Review_Settings__c/fields/SPARTADMS__Periodic_Review_Notification__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Periodic_Review_Notification__c</fullName>
        <description>How days before the notification needs to be sent : For Eg.: 10</description>
        <inlineHelpText>How days before the notification needs to be sent : For Eg.: 10</inlineHelpText>
        <label>Periodic Review Notification(in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>